# LiteBSD-Ports

./: .gitignore  Makefile  README.md
archivers/: Makefile
archivers/fastlz/: Makefile  control
archivers/pdlzip/: AUTHORS  ChangeLog  INSTALL  LzFind.c  LzFind.h  LzmaDec.c  LzmaDec.h  LzmaEnc.c  LzmaEnc.h  Makefile  NEWS  README  control  lzip.h  main.c  pdlzip.1
archivers/unzip/: Makefile  control  lchmod.c  unzip.c
benchmarks/: Makefile
benchmarks/dhrystone/: Makefile  control  dhry-2.1  dhry.h  dhry_1.c  plist
benchmarks/linpack/: Makefile  control  linpack.c  plist
benchmarks/whetstone/: Makefile  control  plist  whetstone.c
comms/: Makefile
comms/ekermit/: Makefile  control
comms/gkermit/: .gitignore  Makefile  control  gcmdline.c  gkermit.c  gunixio.c  gwart.c
comms/picocom/: .gitignore  Makefile  control  picocom.c
comms/zmtx-zmrx/: Makefile  control  zmdm.c  zmrx.c  zmtx.c
devel/: Makefile
devel/9cc/: Makefile  control
devel/gmake/: Makefile  Makefile.DOS  Makefile.in  NMakefile  SMakefile  aclocal.m4  build.sh  build.sh.in  config.ami  config.h  config.h-vms  config.h.W32  config.h.in  config.status  configh.dos  configure  control  dir.c  makeint.h  plist  read.c
devel/libb2/: .gitignore  Makefile  control
devel/linenoise/: .gitignore  Makefile  control
editors/: Makefile
editors/atto/: Makefile  control  plist
editors/ce/: COPYRIGHT  INSTALL  Makefile  ORIGIN  README  TODO  basic.c  bind.c  buffer.c  bug.c  ce.h  celibc.h  cinfo.c  cmode.c  complete.c  config.h  control  copyright  copyright.h  dir.c  display.c  externs.h  file.c  fileio.c  fio.c  fio.h  func.c  help.c  imalloc.h  key.c  line.c  main.c  malloc.c  misc.c  ml.c  newvers.sh  omalloc.c  paragraph.c  paren.c  plist  (+18 more)
editors/dhex/: Makefile  control  plist
editors/ee/: Makefile  control  ee.c  plist
editors/elvis/: .gitignore  Makefile  blk.c  bug#258640.patch  changelog  changelog.upstream  cmd1.c  cmd2.c  config.h  control  curses.c  elvis-tiny_1.4-20.diff  ex.c  main.c  postinst  prerm  range-segfault.patch  recycle.c  redraw.c  regsub.c  rules  substitute-fails.patch  system.c  tempfile.patch  tinytcap.c  tio.c  tmp.c  vi.h  wrapper.c
editors/emg/: ChangeLog  Makefile  README.md  control  plist  ttyio.c
editors/heme/: INSTALL  Makefile  README  THANKS  control  error.c  error.h  heme.1  heme.c  pconfig.c  pconfig.h  pgetopt.c  pgetopt.h  plist  xmalloc.c  xmalloc.h
editors/levee/: Makefile  config.h  control  plist
editors/nano/: AUTHORS  Makefile  basename.c  browser.c  chars.c  config.h  control  cut.c  files.c  global.c  help.c  move.c  nano.1  nano.c  nano.h  nanorc.5  nanorc.sample  plist  prompt.c  proto.h  rcfile.c  search.c  text.c  utils.c  winio.c
editors/sandy/: Makefile  config.h  control  plist
editors/sre/: Makefile  cmd.c  control  init.c  main.c  plist  render.c  setup.c  srch.c
editors/traditional-vi/: Changes  Makefile  README  config.h  control  ex.c  ex.h  ex.spec  ex_addr.c  ex_argv.h  ex_cmdsub.c  ex_get.c  ex_io.c  ex_proto.h  ex_put.c  ex_re.c  ex_re.h  ex_subr.c  ex_tagio.c  ex_temp.c  ex_temp.h  ex_tty.c  ex_tty.h  ex_tune.h  ex_unix.c  ex_v.c  ex_vadj.c  ex_version.c  ex_vget.c  ex_vis.h  ex_vmain.c  ex_voper.c  ex_vops.c  ex_vops2.c  ex_vops3.c  ex_vput.c  exrecover.c  mapmalloc.c  plist  regexp.h
games/: Makefile
games/2048/: Makefile  control
games/an/: COPYRIGHT  HINTS  INSTALL  Makefile  README  TODO  an.6  an.c  control  gan.h  gan_qsort.c
games/aop/: .gitignore  Makefile  README  aop-level-01.txt  aop-level-02.txt  aop-level-03.txt  aop-level-04.txt  aop-level-05.txt  (+9 more)
infrastructure/: Makefile.template
lang/: Makefile
math/: Makefile
misc/: Makefile
net/: Makefile
net/naim/: AUTHORS  BUGS  ChangeLog  FAQ  Makefile  Makefile.am  Makefile.in  README  README.es  TODO  acinclude.m4  aclocal.m4  config.status  configure  configure.ac  control  libtool
net/naim/CYGWIN-PATCHES/: Makefile  Makefile.am  Makefile.in
net/naim/contrib/: extractbuddy.sh
net/naim/doc/: course.hlp  naim.1  naim.hlp  nirc.1
net/naim/include/naim/: modutil.h  naim.h  secs.h
net/naim/libfiretalk/: Makefile  Makefile.am  Makefile.in  README  TODO  aim.c  aim.h  firetalk-int.h  firetalk.c  firetalk.h  firetalk.m4  irc.c  lily.c  tester.c  toc2.c  toc2_uuids.h
net/naim/libltdl/: Makefile  Makefile.am  Makefile.in  ltdl.h
net/naim/secs/: Makefile  Makefile.am  Makefile.in  atomizer.c  block.c  liaison.c  mem.c  script.c  vars.c
net/naim/src/: Makefile  Makefile.am  Makefile.in  buddy.c  cmplhelp.sh  cmplhlp2.sh  commands.txt  config.h  config.h.in  conio.c  conio_cmds.h  conio_keys.h  echof.c  events.c  fireio.c  gencmd2.sh  gencmds.sh  genkeys.sh  hamster.c  help.c  help.h  helpcmd.c  hwprintf.c  keyboard.txt  linux_vsprintf.c  linux_vsprintf.h  main.c  main_stub.c  modutil.c  naim-int.h  naim.m4  naimrc_sample.h  rc.c  rodents.c  script.c  set.c  snapshot.h  win.c
shells/: Makefile
sysutils/: Makefile
sysutils/deco/: .gitignore  Makefile  Makefile.in  cap.c  choice.c  cmd.c  com.c  config.cache  config.status  configure  configure.in  control  cyrref.man  deco.h  dir.c  dir.h  draw.c  edit.c  env.c  env.h  ex.c  help.c  hexview.c  key.c  main.c  menu.c  menu.h  mh.c  plist  pw.c  rec.c  rec.h  ref.man  run.c  scr.c  scr.h  tty.c  ut.c  view.c
sysutils/deco/help/: d.edit  d.general  d.hexview  d.view  e.edit  e.general  e.hexview  e.view  f.edit  f.general  f.hexview  f.view  r.edit  r.general  r.hexview  r.view  u.edit  u.general  u.hexview  u.view
sysutils/deco/port/: Makefile
sysutils/deco/port/pkg/: COMMENT  DESCR  PLIST
textproc/: Makefile
www/: Makefile
www/links/: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile-orig  Makefile.am  Makefile.in  acconfig.h  aclocal.m4  af_unix.c  arrow.inc  atheos.cpp  auth.c  beos.c  beos.h  bfu.c  bits.h  block.c  bookmark.c  cache.c  cfg.h  charsets.c  codepage.inc  com-defs.h  compress.c  config-vms.h  config.cache  config.h  config.h.in  config.status  configure  configure.in  connect.c  control  cookies.c  data.c  default.c  descrip.mms  dfb_cur.h  dip.c  (+88 more)
(+752 files in other folders)
