SUBDIRS = libfiretalk libltdl secs src CYGWIN-PATCHES

man_MANS = doc/naim.1 doc/nicq.1 doc/nirc.1 doc/nlily.1
pkgdoc_DATA = FAQ README

EXTRA_DIST = \
	BUGS \
	README \
	README.es \
	configure \
	contrib/extractbuddy.sh \
	doc/course.hlp \
	doc/naim.hlp \
	${man_MANS} \
	${pkgdoc_DATA}
bin_SCRIPTS = \
	contrib/extractbuddy.sh

pkginclude_HEADERS = include/naim/naim.h include/naim/modutil.h include/naim/secs.h

snapshottime = `date +%Y-%m-%d-%H%M`
snap: README
	echo "#define NAIM_SNAPSHOT \"-${snapshottime} (development snapshot)\"" > ${top_srcdir}/src/snapshot.h
	make distcheck distdir=$(PACKAGE)-$(VERSION)-${snapshottime}


release: README
	echo "#define NAIM_SNAPSHOT \"\"" > ${top_srcdir}/src/snapshot.h
	make distcheck


README: ${srcdir}/doc/naim.1
	PAGER="cat -v" man ${srcdir}/doc/naim.1 | sed 's/.\^.//g' > README

tarball: tbz2
tbz2:
	mkdir "${top_builddir}/tmp"
	make install-strip DESTDIR="`cd ${top_builddir}/tmp; pwd`"
	(cd "${top_builddir}/tmp"; $(AMTAR) cf - --owner 0 --group 0 usr | bzip2 -9 -c >../${pkgtarball})
	rm -rf "${top_builddir}/tmp"

CYGREL ?= 1

Cygwin: cyg
cyg: distcheck tbz2
	mkdir "${top_builddir}/Cygwin"
	
	mv $(distdir).tar.bz2 "${top_builddir}/Cygwin"
	printf "">"${top_builddir}/Cygwin"/$(distdir)-${CYGREL}.patch
	echo "(bunzip2 -c -k $(distdir).tar.bz2 | tar xvf -) && cd $(distdir) && patch -p1 <../$(distdir)-${CYGREL}.patch && ./configure --prefix=/usr && make cyg" >"${top_builddir}/Cygwin"/$(distdir)-${CYGREL}.sh
	chmod a+x "${top_builddir}/Cygwin"/$(distdir)-${CYGREL}.sh
	(cd "${top_builddir}/Cygwin"; $(AMTAR) cf - --owner 0 --group 0 $(distdir).tar.bz2 $(distdir)-${CYGREL}.patch $(distdir)-${CYGREL}.sh | bzip2 -9 -c >$(distdir)-${CYGREL}-src.tar.bz2)
	(cd "${top_builddir}/Cygwin"; rm $(distdir).tar.bz2 $(distdir)-${CYGREL}.patch $(distdir)-${CYGREL}.sh)
	
	mv ${pkgtarball} "${top_builddir}/Cygwin/$(distdir)-${CYGREL}.tar.bz2"
	echo "# This file is generated by make cyg, do not edit directly." >>"${top_builddir}/Cygwin"/setup.hint
	  echo "@ naim" >>"${top_builddir}/Cygwin"/setup.hint
	  echo "sdesc: \"Console AIM, ICQ, IRC, and Lily client\"" >>"${top_builddir}/Cygwin"/setup.hint
	  echo "ldesc: \"Console client for AOL Instant Messenger, ICQ, Internet Relay Chat, and The lily CMC\"" >>"${top_builddir}/Cygwin"/setup.hint
	  echo "requires: libncurses8 cygwin" >>"${top_builddir}/Cygwin"/setup.hint
	  echo "category: Net Web" >>"${top_builddir}/Cygwin"/setup.hint
