dnl Process this file with autoconf to produce a configure script.
AC_INIT(cap.c)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h sys/ioctl.h termio.h termios.h unistd.h termcap.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_STRUCT_ST_RDEV
AC_STRUCT_TM

dnl Checks for library functions.
AC_HEADER_STDC
AC_TYPE_GETGROUPS
AC_PROG_GCC_TRADITIONAL
AC_FUNC_MEMCMP
AC_TYPE_SIGNAL
AC_FUNC_VFORK
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(gethostname getgroups opendir memcpy strtol dirfd tcgetattr tcsetpgrp killpg)
AC_CHECK_LIB(cposix, main)
AC_CHECK_LIB(ncurses, tgetent, , AC_CHECK_LIB(termcap, tgetent))

AC_OUTPUT(Makefile)
